first draft fanpage

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">Name</div>
+        <div class="header"> Tory Lanez </div>
         <div class=navbar>
              <a href="#">Home</a>
-             <a href="#">About</a>
-             <a href="#">Gallery</a>
+             <a href="#">About Tory Lanez </a>
+             <a href="#">Lanez Pics</a>
         </div>
         <div class="main">
         </div>
